Fixed map SVG covering slider

--- a/stylesheets/map.css
+++ b/stylesheets/map.css
@@ -1,6 +1,5 @@
 #magic-svg-3 {
     position: relative;
-    z-index: 999;
 }
 
 g.pathGroup path {
